# async-fuzzing-playbox

./: Cargo.toml  LICENSE  README.md
afl/: Cargo.toml
afl/src/: main.rs
binaryfuzz/: Cargo.toml
binaryfuzz/src/: client.rs  fuzzer.rs  instance.rs  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: reading_target_future_poll.rs  reading_target_future_tokio_full.rs  simple_target_full_tokio.rs  simple_target_full_tokio_lazy.rs  simple_target_future_poll.rs  spawn_target_future_poll.rs  spawn_target_tokio_test.rs
fuzz_target/src/: lib.rs
src/: lib.rs
