cargo-features = ["per-package-target"]

[package]
name = "binaryfuzz"
default-target = "aarch64-unknown-linux-gnu"
version = "0.1.0"
edition = "2024"

[toolchain]
channel = "nightly"

[features]
## Set emulator to big endian
be = ["libafl_qemu/be"]

#! ## Mutually exclusive architectures
arm = ["libafl_qemu/arm"]
x86_64 = ["libafl_qemu/x86_64"]
i386 = ["libafl_qemu/i386"]
aarch64 = ["libafl_qemu/aarch64"]
mips = ["libafl_qemu/mips"]
ppc = ["libafl_qemu/ppc", "be"]
hexagon = ["libafl_qemu/hexagon"]

[dependencies]
libafl = "0.15.1"
libafl_bolts = "0.15.1"
libafl_qemu = { version = "0.15.1", features = ["usermode", "aarch64"] }
typed-builder = "0.20.0"
