[package]
name = "async_fuzzing_playbox_fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"]}
libfuzzer-sys = "0.4"
tokio = { version = "1.39.2", features = ["full"]}

[dependencies.async_fuzzing_playbox]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "simple_target_full_tokio"
path = "fuzz_targets/simple_target_full_tokio.rs"
test = false
doc = false

[[bin]]
name = "simple_target_future_poll"
path = "fuzz_targets/simple_target_future_poll.rs"
test = false
doc = false
